--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,5 +1,5 @@
 :root {
-    --font: 1.3rem;
+    --font: 1.4rem;
     --mainColor: #FBF0F0;
     --secondColor: #DFD3D3;
     --thirdColor: #B8B0B0;
@@ -22,6 +22,7 @@ html {
 
 body {
     background-color: var(--mainColor);
+
 }
 
 .header_div {
@@ -30,10 +31,11 @@ body {
     display: flex;
     color: var(--fifthColor);
     width: 100%;
-    height: 80px;
+    height: 61px;
     background-color: var(--secondColor);
     border-radius: 0px 0px 13px 13px;
     font-size: var(--font);
+    position: fixed;
 }
 h1 {
     background-color: var(--secondColor);
@@ -48,5 +50,88 @@ h1 {
 
 .div_img__color {
     background-color: var(--secondColor);
-    height: 40px;
+    height: 34px;
+    margin-right: 8px;
+    margin-left: 8px;
+}
+
+.header-h1 {
+    background-color: var(--secondColor);
+    margin-bottom: 7px;
+    margin-right: 19px;
+}
+.div_search-options__right {
+    background-color: var(--secondColor);
+
+}
+
+.main_section {
+    display: flex;
+    justify-content: center;
+    align-items: flex-start;
+    width: 100%;
+    height: 1000px;
+    flex-direction: column;
+}
+
+h2 {
+    color: var(--fifthColor);
+    font-size: 1.7rem;
+}
+.section_explore {
+    margin-left: 12px;
+    width: 90%;
+    height: 500px;
+}
+
+.hr {
+    margin-top: 10px;
+    width: 100%;
+    height: 2px;
+
+}
+
+.section_span__text {
+    display: flex;
+    font-size: var(--font);
+    margin-top: 10px;
+    color: var(--fourthColor);
+}
+
+figure {
+    justify-content: space-around;
+    display: flex;
+    flex-direction: column;
+    background-color: var(--fourthColor);
+}
+
+.figure_div__backgroundColor {
+    border-radius: 20%;
+    background-color: #DFD3D3;
+    width: 155px;
+    height: 80px;
+    margin-top: 10px;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    margin-bottom: 10px;
+}
+
+.div_img__size {
+    background-color: var(--fourthColor);
+    width: 60px;
+    height: 60px;
+    border-radius: 50%;
+}
+
+span {
+    font-size: var(--font);
+    background-color: var(-);
+}
+
+.section_div__people {
+    background-color: var(--fourthColor);
+    width: 100%;
+    height: 400px;
+    margin-top: 20px;
 }
