--- a/styles/styles.css
+++ b/styles/styles.css
@@ -135,3 +135,10 @@ span {
     height: 400px;
     margin-top: 20px;
 }
+
+
+.container_booksjobs {
+    width: 100%;
+    height: 500px;
+    background-color: aqua;
+}
