--- a/styles/styles.css
+++ b/styles/styles.css
@@ -130,15 +130,92 @@ span {
 }
 
 .section_div__people {
-    background-color: var(--fourthColor);
+    display: flex;
     width: 100%;
     height: 400px;
     margin-top: 20px;
+    overflow-x: scroll;
+    scroll-snap-type: x proximity;
+    
+}
+
+.section__recomendations {
+    background-color: #dee4fe;
+    display: flex;
+    justify-content: center;
+    width: 336px;
+    height: 380px; 
+    margin-right: 30px;
+    margin-left: 5px;  
+    position: relative;
+}
+
+.div__book__Container {
+  margin-left: 20px;
+  background-color: #fafafa;
+  width: 159px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 202px;
+  margin-top: 52px;
+  flex-direction: column;
+  border-radius: 5px;
+  margin-bottom: 20px;
 }
 
 
-.container_booksjobs {
-    width: 100%;
-    height: 500px;
-    background-color: aqua;
+.div__span-fontSize {
+    font-size: 15px;
+    margin-top: -17px;
+    margin-bottom: 19px;
+}
+
+.image_size {
+    width:100px;
+    height: 130px;
+    -webkit-box-shadow: 5px 14px 19px 8px rgba(0,0,0,0.18); 
+    box-shadow: 5px 14px 19px 8px rgba(0,0,0,0.18);
+}
+
+.div__book__Resume {
+  display: flex;
+  flex-direction: column;
+  align-items: start;
+  margin-left: 28px;
+  padding: 9px;
+  height: 230px;
+  width: 174px;
+  background-color: #fafafa;
+  margin-top: 40px;
+  margin-right: 29px;
+  border-radius: 5px;
+}
+
+.div__resume-book > p {
+    margin-left: 8px;
+}
+
+.div__book__buy {
+  width: 300px;
+  height: 60px;
+  background-color: #fafafa;
+  display: flex;
+  align-items: center;
+  margin-top: 310px;
+  margin-right: 9px;
+  position: absolute;
+  justify-content: center;
+  border-radius: 5px;
+}
+
+.div__book__buy > button {
+    width: 170px;
+    height: 40px;
+    background-color: #125462; /* Green */
+    border: none;
+    color: white;
+    text-align: center;
+    text-decoration: none;
+    border-radius: 8px;
 }
