--- a/styles/styles.css
+++ b/styles/styles.css
@@ -71,7 +71,7 @@ h1 {
     justify-content: center;
     align-items: flex-start;
     width: 100%;
-    height: 1000px;
+    height: 659px;
     flex-direction: column;
 }
 
@@ -216,4 +216,13 @@ span {
     text-align: center;
     text-decoration: none;
     border-radius: 8px;
+}
+
+.search_section {
+    display: flex;
+    justify-content: center;
+    width: 80%;
+    height: 500px;
+    background-color: #dee4fe;
+    margin-left: 37px;
 }
