--- a/styles/styles.css
+++ b/styles/styles.css
@@ -32,37 +32,36 @@ body {
     color: var(--fifthColor);
     width: 100%;
     height: 61px;
-    background-color: var(--secondColor);
+    background: #EDEEF7;
     border-radius: 0px 0px 13px 13px;
     font-size: var(--font);
     position: fixed;
     z-index: 2;
 }
 h1 {
-    background-color: var(--secondColor);
-    border-radius: 14px;
+    background: #EDEEF7;;
     height: 40px;
     width: 106px;
 }
 
 .div_menu-options__left {
-    background-color: var(--secondColor);
+    background: #EDEEF7;;
 }
 
 .div_img__color {
-    background-color: var(--secondColor);
+    background: #EDEEF7;
     height: 34px;
     margin-right: 8px;
     margin-left: 8px;
 }
 
 .header-h1 {
-    background-color: var(--secondColor);
+    background: #EDEEF7;;
     margin-bottom: 7px;
     margin-right: 19px;
 }
 .div_search-options__right {
-    background-color: var(--secondColor);
+    background: #EDEEF7;;
 
 }
 
@@ -314,14 +313,14 @@ span {
     display: flex;
     overflow-x: scroll;
     scroll-snap-type: x proximity;
-    background-color: #2979c0;
+    background-color: #cbd4ff;
     padding-top: 30px;
     width: 100%;
     margin-top: 65px;
 } 
 
 .section__books {
-    background-color: #dee4fe;
+    background-color: #f5f6f9;
     display: flex;
     justify-content: center;
     width: 313px;
@@ -346,7 +345,7 @@ span {
     margin-bottom: -58px;
     position: absolute;
     text-align: center;
-    box-shadow: 1px 25px 17px 2px rgba(0, 0, 0, 0.116);
+    box-shadow: 1px 20px 16px 2px rgba(141, 148, 204, 0.31);
 }
 
 .div__bookTitle {
