--- a/styles/styles.css
+++ b/styles/styles.css
@@ -36,7 +36,7 @@ body {
     border-radius: 0px 0px 13px 13px;
     font-size: var(--font);
     position: fixed;
-    z-index: 2;
+    z-index: 8;
 }
 h1 {
     background: #EDEEF7;;
@@ -61,7 +61,7 @@ h1 {
     margin-right: 19px;
 }
 .div_search-options__right {
-    background: #EDEEF7;;
+    background: #EDEEF7;
 
 }
 
@@ -70,16 +70,115 @@ h1 {
     justify-content: center;
     align-items: flex-start;
     width: 100%;
-    height: 786px;
+    height: 358px;
     flex-direction: column;
 }
+
+.section__welcome {
+    display: flex;
+    margin-top: 1425px;
+    position: static;
+    width: 100%;
+    z-index: 3;
+}
+
+.section__div--Size {
+    position: absolute;
+    z-index: 5;
+    margin-top: 188px;
+    margin-left: 160px;
+}
+.section--figure {
+    background: #e0d7f8;
+    position: absolute;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;    
+    height: 500px;
+}
+
+
+.figure__div--right {
+    position: absolute;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 500px;
+    margin-right: -205px;
+}
+
+.figure__img--size {
+    position: absolute;
+    height: 110px;
+    width: 75px;
+    background-color: rgb(22, 22, 22);
+    box-shadow: 3px 10px 15px 1px rgba(106, 72, 232, 0.42);
+    border-radius: 4px;
+}
+
+.section__span--title {
+    font-size: 28px;
+    background-color: #e0d7f8;
+    text-shadow: 3px 10px 15px 1px rgba(25, 20, 46, 0.42);
+    margin-left: 116px;
+    position: absolute;
+    margin-top: 190px;
+    z-index: 1;
+    color: white;
+    text-shadow: 2px 10px 10px #1312144d;
+}
+
+
+.img1--size {
+    z-index: 1;
+margin-top: -237px;
+margin-left: 58px;
+height: 130px;
+width: 95px;
+}
+.img2--size {
+    z-index: 1;
+margin-right: 439px;
+margin-top: 15px;
+height: 120px;
+width: 89px;
+}
+.img3--size {
+    z-index: 4;
+margin-top: 290px;
+margin-right: 144px;
+width: 95px;
+height: 130px;
+}
+.img4--size {
+    z-index: 3;
+margin-top: -261px;
+margin-right: 356px;
+}
+
+.img5--size {
+    z-index: 3;
+margin-top: 280px;
+margin-right: 477px;
+width: 55px;
+height: 90px;
+}
+
+.img6--size {
+    z-index: 3;
+    margin-top: 30px;
+}
+
+
+
 
 h2 {
     color: var(--fifthColor);
     font-size: 1.7rem;
 }
 .section_explore {
-    margin-top: 692px;
+    margin-top: 513px;
     margin-left: 12px;
     width: 90%;
     height: 500px;
