--- a/styles/styles.css
+++ b/styles/styles.css
@@ -144,33 +144,35 @@ h1 {
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 100px;
-    height: 130px;
-    border-radius: 15px;
-    background-color: #ccc3bd;
-    margin-left: 15px;
+    width: 105px;
+    height: 106px;
+    border-radius: 16px;
+    box-shadow: 15px 10px 8px -3px #80767640;
 }
 
 
 .div__mainImages {
     width: 100px;
     height: 100px;
-    border-radius: 10px;
+    border-radius: 11px;
 }
-
 .img__text--container {
-    width: 131px;
+    
+    width: 126px;
     height: 25px;
     display: flex;
     justify-content: center;
     text-align: center;
     margin-top: 10px;
     border-radius: 20px;
-    background-color:#a8c0ff;
+    background-color: #f5f5f7;
+    box-shadow: 11px 13px 11px -3px #80767640;
+    margin-left: -3px;
 }
 
 .img__text--container > span {
-    background-color:#a8c0ff;   
+    background-color: #f5f5f7;
+    color: #067dfe;  
 }
 .div__homeElementsContainer  {
     margin-right: 144px;
@@ -179,12 +181,14 @@ h1 {
     display: flex;
     justify-content: center;
     align-items: center;
+    background-color: #f5f5f7;
+    border-radius: 29px;
 }
 
 
 .div__homeContent--container {
     position: absolute;
-    width: 1px;
+    width: 0px;
     display: flex;
     justify-content: center;
     flex-direction: column;
@@ -194,18 +198,43 @@ h1 {
     margin-left: 31px;
 }
 .div__homecontent2{
-    margin-top: 362px;
+    margin-top: 358px;
     z-index: 2;
 
 }
-.div__homecontent3{
-    margin-left: -214px;
-    
-}
 .div__homecontent4{
-    margin-top: 41px;
-    margin-left: 253px;
+    margin-top: 94px;
+    margin-left: 257px;
     z-index: 3;
+}
+.img4__container {
+    width: 95px;
+    height: 101px;
+
+}
+.div__mainImg4 {
+    width: 88px;
+    height: 91px;
+}
+.div__text--robert {
+    width: 100px;
+}
+
+.div__homecontent3{
+    margin-left: -182px;
+    z-index: 3;
+}
+.img3__container {
+    width: 121px;
+    height: 135px;
+
+}
+.div__mainImg3 {
+    width: 116px;
+    height: 126px;
+}
+.div__text--robert {
+    width: 100px;
 }
 
 
